add addition imgs, create slider

--- a/templates/create_auction.html
+++ b/templates/create_auction.html
@@ -38,8 +38,11 @@
         {{form.bid_up}}
         {{form.start_auction.label}}
         {{form.start_auction}}
+
         {{form.main_img.label}}
         {{form.main_img}}
+        {{form.files.label}}
+        {{form.files}}
         <select name="seller" class="form-control" id="id_seller" hidden>
           <option value="{{user.id}}" selected=""></option>
         </select>
