--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,22 @@
 	<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
 
+	<link rel="stylesheet" href="{% static 'style/style.css'%} ">
+
+	<link rel="stylesheet" href="{% static 'style/owlcarousel/owl.carousel.min.css'%} ">
+	<link rel="stylesheet" href="{% static 'style/owlcarousel/owl.carousel.css'%} ">
+
+
+	<link rel="stylesheet" href="{% static 'style/owlcarousel/owl.theme.default.min.css'%} ">
+	<link rel="stylesheet" href="{% static 'style/owlcarousel/owl.theme.default.css'%} ">
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+	<script src="{% static 'js/owlcarousel/jquery.min.js' %}"></script>
+	<script src="{% static 'js/owlcarousel/owl.carousel.min.js' %}"></script>
 </head>
 <body>
+	
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<a class="navbar-brand" href="{% url 'index' %}">Auctions</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -106,6 +118,8 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 
+
+<script src="{% static 'js//pop_up.js' %}"></script>
 
 </body>
 </html>
