add pop up, and user accounts page

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,8 @@
 
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="{% url 'logout' %}">LogOut</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="{% url 'account_page' %}">Account</a>
 					{% else %}
 
 						<a class="dropdown-item" href="{% url 'login' %}">LogIn</a>
