--- a/static/style/style.css
+++ b/static/style/style.css
@@ -10,3 +10,38 @@
     border: 1px solid;
     border-radius: 3px;
 }
+
+#pop_up{
+    display: none;
+    position: fixed;
+    overflow: auto;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
+
+.show{
+    display:block !important;
+}
+
+.img_on_popup {
+    height: 100%;
+    margin: 0 auto;
+    padding: 45px 0;
+    display: block;
+}
+
+
+
+#close_popup {
+    position: fixed;
+    right: 5%;
+    color: #fff;
+    top: 5%;
+    cursor: pointer;
+}
