create user change profile form, optimize queries in account page, create table in buyer account

--- a/templates/account_page.html
+++ b/templates/account_page.html
@@ -9,14 +9,13 @@ Account page
 
 {% block content_title %}
 welcome 
-
-{% for user in user_data %}
-    {{user.username}}
-{% endfor %}
+{{user.username}}
 
 {% endblock %}
 
 {% block content %}
+
+
 
 
 
@@ -34,174 +33,67 @@ welcome
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
 
-        <div class="mb-3 mt-3">
-            {% for user_info in user_data %}
-            
-            
         
-            <p>{{user_info.username}}</p>
-            <p>{{user_info.email}}</p>
-            <p>{{user_info.password}}</p>
-            {% endfor %}
-
+        <div class="mb-3 mt-3">
             <div class=" col-md-6">
-
                 <form id="change_form" class="form-group" method="POST"  enctype="multipart/form-data">
                     {% csrf_token %}
-            {{form}}
-
-            <button form="change_form" type="submit" class="btn btn-primary mt-4" >Save</button>
-        </form>
-    
-    
-    </div>
-
-
+                    {{form.username.label}}
+                    {{form.username}}
+                    {{form.email.label}}
+                    {{form.email}}
+                    <button form="change_form" type="submit" class="btn btn-primary mt-4" >Save</button>
+                </form>
+                <a href="{% url 'password_change' %}">Change your password </a>
+            </div>
         </div>
+
+
     </div>
     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
 
+        {% for i in groups_user_sellers %}
+            {% if i.id == user.id%}
 
+            {% include 'include/sellers/seller_account_list_active_auctions.html' %}
 
-        <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">Auctions</th>
-                <th scope="col">Photo</th>
-                <th scope="col">start price</th>
-                <th scope="col">number of bets</th>
-                <th scope="col">end price</th>
-              </tr>
-            </thead>
-            <tbody>
-        
-        
-        
-        
-        {% for auction in user_auctions %}
-            
-            {% if auction.status == 2%}
-                <tr>
-                    <th scope="row">{{auction.title}} : {{auction.id}}</th>
-                    <td> <img class="table_img" src="{{ MEDIA_URL }}{{auction.main_img}}" alt=""> </td>
-                    <td>{{auction.start_price}}</td>
-                
-
-                        <td  colspan="2" >not fineshed yet</td>
-                        
-                    
-                
-                    </tr>
-            
             {% endif %}
         {% endfor %}
 
-        
-</tbody>
-</table>
 
+        {% for i in groups_user_buyers %}
+            {% if i.id == user.id%}
 
+                {% include 'include/buyers/buyer_account_list_active_auctions.html' %}
+
+            {% endif %}
+        {% endfor %}
 
     </div>
     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
 
+        {% for i in groups_user_buyers %}
+            {% if i.id == user.id%}
 
+                {% include 'include/buyers/buyer_account_list_recent_auctions.html' %}
 
-
-        <table class="table table-striped">
-            <thead>
-              <tr>
-                <th scope="col">Auctions</th>
-                <th scope="col">Photo</th>
-                <th scope="col">start price</th>
-                <th scope="col">number of bets</th>
-                <th scope="col">end price</th>
-                <th scope="col">Winner contacts</th>
-              </tr>
-            </thead>
-            <tbody>
-        
-        
-        
-        
-        {% for auction in user_auctions %}
-            {% if auction.status == 3%}
-                <tr>
-                    <th scope="row">{{auction.title}} : {{auction.id}}</th>
-                    <td> <img class="table_img" src="{{ MEDIA_URL }}{{auction.main_img}}" alt=""> </td>
-                    <td>{{auction.start_price}}</td>
-                
-                    
-                        
-                        <td>
-                            {% for bid in bids %}
-                                {% for b, val in bid.items %}
-                                    {% if b == auction.id%}
-                                        {{val}}
-                                    {% endif %}
-                                {% endfor %}
-                            {% endfor %}
-                        </td>
-                        
-                        
-
-                        {% for winner in winners %}
-                            {% for auction_id, values in winner.items %}
-                            
-                                {% if auction_id == auction.id%}
-                                    
-
-                                    {% for price, buyer in values.items %}
-                                    <td>{{price}}</td>
-                                     
-                <td>
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                    <p class="nav-p active" >Name: {{buyer}}</p>
-                    </li>
-                    <li class="nav-item">
-                    <p class="nav-p active" >Email: {{buyer.email}}</p>
-                    </li>
-                </ul>
-                </td>
-
-
-
-
-
-
-
-                                    {% endfor %}
-                                {% endif %}
-                            {% endfor %}
-                        {% endfor %}
-
-
-                        </td>
-                
-
-                    
-                
-                </tr>
-            
             {% endif %}
         {% endfor %}
 
 
+        {% for i in groups_user_sellers %}    
+            {% if i.id == user.id%}
 
+                {% include 'include/sellers/seller_account_list_recent_auctions.html' %}
+
+            {% endif %}
+        {% endfor %}
+
+    <div id="pop_up">
+        <span id="close_popup">close</span>
     </div>
-  </div>
-
-
-</tbody>
-</table>
-
-<div id="pop_up">
-
-    <span id="close_popup">close</span>
-  </div>
   
-
+</div>
 
 {% endblock %}
 
