remove db.sqlite3 from folder and fix problem with table in buyer account page

--- a/templates/include/buyers/buyer_account_list_active_auctions.html
+++ b/templates/include/buyers/buyer_account_list_active_auctions.html
@@ -6,53 +6,65 @@
       <th scope="col">Auctions</th>
       <th scope="col">Photo</th>
       <th scope="col">start price</th>
-      <th scope="col">end price</th>
-      <th scope="col">Winner contacts</th>
+      <th scope="col">your price</th>
+      <th scope="col">Status</th>
       </tr>
   </thead>
   <tbody>
-      
-    {% for prices_info in user_auctions_short_from_prices_actual %}
-            
-          <tr>
-              <th scope="row">
-                  <ul class="nav flex-column">
-                      <li class="nav-item">
-                      <p class="nav-p active" >{{prices_info.auction.title}}</p>
-                      </li>
-                      <li class="nav-item">
-                      <p class="nav-p active" >{{prices_info.auction.id}}</p>
-                      </li>
-                      <li class="nav-item">
-                      <p class="nav-p active" >{{prices_info.auction.start_auction}}</p>
-                      </li>
-                  </ul>
-              </th>
-              <td> <img class="table_img" src="{{ MEDIA_URL }}{{prices_info.auction.main_img}}" alt=""> </td>
-              <td>{{auction.start_price}}</td>
-              
-              <td>
 
-                {{prices_info.new_price}}
-                {{prices_info.status}}
+    {% for auctions in unique_actual_auctions_for_buyer %}
+<p>auctions.auction.id: {{auctions.auction.id}}</p>
+        
 
 
+    {% endfor %}
 
-              </td>
-                           
-              <td>
-              <ul class="nav flex-column">
-                  <li class="nav-item">
-                  <p class="nav-p active" >Name: {{prices_info.auction.seller}}</p>
-                  </li>
-                  <li class="nav-item">
-                  <p class="nav-p active" >Email: {{prices_info.auction.seller.email}}</p>
-                  </li>
-              </ul>
-              </td>            
-          </tr>
 
-      {% endfor %}
+    {% for prices_info in unique_actual_auctions_for_buyer %}
+        
+        {% if prices_info.auction.id %}
+
+            <tr>
+                <th scope="row">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                        <p class="nav-p active" >{{prices_info.auction.title}}</p>
+                        </li>
+                        <li class="nav-item">
+                        <p class="nav-p active" >{{prices_info.auction.id}}</p>
+                        </li>
+                        <li class="nav-item">
+                        <p class="nav-p active" >{{prices_info.auction.start_auction}}</p>
+                        </li>
+                    </ul>
+                </th>
+                <td> <img class="table_img" src="{{ MEDIA_URL }}{{prices_info.auction.main_img}}" alt=""> </td>
+                <td>{{prices_info.auction.start_price}}</td>
+                
+                <td>
+
+                    {{prices_info.new_price}}
+
+                </td>
+
+                <td>
+
+
+
+                    {% if prices_info.winner == 0 %}
+                    
+                        you are not leader
+                    {% elif prices_info.winner == 1 %}
+                        you are leader
+                    {% endif %}
+
+                </td>
+                            
+                        
+            </tr>
+
+        {% endif %}
+    {% endfor %}
 
       </div>
   </div>
