--- a/templates/include/buyers/buyer_account_list_recent_auctions.html
+++ b/templates/include/buyers/buyer_account_list_recent_auctions.html
@@ -7,7 +7,7 @@
         <th scope="col">Photo</th>
         <th scope="col">start price</th>
         <th scope="col">end price</th>
-        <th scope="col">Winner contacts</th>
+        <th scope="col">Seller contacts</th>
         </tr>
     </thead>
     <tbody>
