--- a/templates/include/buyers/buyer_account_list_recent_auctions.html
+++ b/templates/include/buyers/buyer_account_list_recent_auctions.html
@@ -31,7 +31,7 @@
                     </ul>
                 </th>
                 <td> <img class="table_img" src="{{ MEDIA_URL }}{{prices_info.auction.main_img}}" alt=""> </td>
-                <td>{{prices_infoauction.auction.start_price}}</td>
+                <td>{{prices_info.auction.start_price}}</td>
                 
                 <td>{{prices_info.new_price}}</td>
                              
