--- a/templates/account_page.html
+++ b/templates/account_page.html
@@ -27,7 +27,8 @@ welcome
       <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Active auctions</a>
     </li>
     <li class="nav-item" role="presentation">
-      <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Past auctions</a>
+      <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Past auctions
+      </a>
     </li>
   </ul>
   <div class="tab-content" id="myTabContent">
