--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 
-
 {% extends 'base.html' %}
+{% load i18n %}
+
 
 
 {% block title %}
@@ -11,7 +12,7 @@
 
 
 {% block content_title %}
-index
+{% trans "index" %}
 {% endblock %}
 
 
