--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,29 @@
 
 {% block content %}
 
+  <!-- Position it -->
+  <div style="position: fixed; top: 18%; right: 3%; overflow: hidden;
+  z-index: 15;">
+    
+    <!-- Then put toasts within -->
+    <div class="toast fade" role="alert" aria-live="assertive" aria-atomic="true" id="toast-notification">
+      <div class="toast-header">
+        <svg class="bd-placeholder-img rounded mr-2" width="20" height="20" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img"><rect width="100%" height="100%" fill="#007aff"></rect></svg>
+        <strong class="mr-auto">Notification</strong>
+        <small>now</small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span id="close-notification" aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="toast-body">
+        COngratulations! Your bid is accepted!
+      </div>
+    </div>
+
+
+  </div>
+
+
 
 <div id="pop_up">
 
@@ -39,7 +62,11 @@
         </button>
       </div>
       <div class="modal-body">
-        ...
+        Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+<br>
+Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+<br>
+Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.
       </div>
       <div class="modal-footer">
 
