start change create auction v2

--- a/static/style/style.css
+++ b/static/style/style.css
@@ -89,3 +89,11 @@
     height: 25px;
     cursor: pointer;
 }
+
+
+.field_start_auction{
+    display:none;
+}
+.show_start_auction{
+    display:block !important;
+}
