--- a/templates/create_auction.html
+++ b/templates/create_auction.html
@@ -20,7 +20,7 @@
 
 {% block content %}
 
-<p>post_time {{post_time}}</p>
+<p>post_time {{post_time_ok}}</p>
 <div class=" col-md-6">
 
     <form id="add_form" class="form-group" method="POST"  enctype="multipart/form-data" name="createAuctionForm">
@@ -37,35 +37,71 @@
         {{form.bid_up}}
 
 
-        {{form.start_auction.label}}
-        {{form.start_auction}}
 
         <div class="mt-3 mb-3">
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="myRadios" id="inlineRadio1" value="option1" checked>
+                <input class="form-check-input" type="radio" name="myRadios" id="RadioAutomatic" value="automatic" checked>
                 <label class="form-check-label" for="inlineRadio1">Automatic</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="myRadios" id="inlineRadio2" value="option2">
+                <input class="form-check-input" type="radio" name="myRadios" id="RadioManual" value="manual">
                 <label class="form-check-label" for="inlineRadio2">Manual</label>
             </div>
         </div>
 
+<div  class="mt-3 mb-3 field_start_auction" id="idStartAuction" >
 
-        <div class="mt-3 mb-3 field_start_auction">
-            <input type="date" name="start_auction" class="form-control" required="" id="id_start_auction">
+    <div class="mt-3 mb-3" >
+            
+        Start auction date 
+        <div class="input-group">
+            <input type="date" name="start_auction" class="form-control" required="" id="id_start_auction"   value="0001-01-01">
+            <div class="input-group-append" id="button-addon4">
+              <button class="btn btn-outline-secondary" id="choose_free_time" type="button">Show free time</button>
+
+            </div>
         </div>
 
 
+    </div>
+
+    <div class="mt-3 mb-3" >
+        Start auction time 
+        <select name="start_auction_time" class="form-control field_start_auction" id="id_start_auction_time" >
+            <option value="0" selected="">Choice</option>
+            <option value="1" >1</option>
+            <option value="2" >2</option>
+            <option value="3" >3</option>
+            <option value="4" >4</option>
+            <option value="5" >5</option>
+            <option value="6" >6</option>
+            <option value="7" >7</option>
+            <option value="8" >8</option>
+            <option value="9" >9</option>
+        </select>
+
+    </div>
+
+</div>
+
+        
+
+
+
+
         {{form.main_img.label}}
-        {{form.main_img}}
+        <input type="file" name="main_img" accept="image/*" class="form-control" required="" id="id_main_img">
+
+
+
+
         {{form.files.label}}
         {{form.files}}
         <select name="seller" class="form-control" id="id_seller" hidden>
           <option value="{{user.id}}" selected=""></option>
         </select>
         <input type="number" name="status" class="form-control" id="id_status" value="1" hidden>
-        <input type="number" name="sort_auction" class="form-control" id="id_sort_auction" value="{{post_time}}" hidden>
+        <input type="number" name="sort_auction" class="form-control" id="id_sort_auction" value="{{post_time_ok}}" hidden>
 
         <button form="add_form" type="submit" class="btn btn-primary mt-4" >Create New Auction</button>
     </form>
@@ -76,3 +112,4 @@
 
 
 {% endblock %}
+
