--- a/templates/create_auction.html
+++ b/templates/create_auction.html
@@ -65,26 +65,16 @@
 
     </div>
 
-    <div class="mt-3 mb-3" >
+    <div class="mt-3 mb-3 field_shoise_time"  id="field_shoise_time_id">
         Start auction time 
         <select name="start_auction_time" class="form-control field_start_auction" id="id_start_auction_time" >
             <option value="0" selected="">Choice</option>
-            <option value="1" >1</option>
-            <option value="2" >2</option>
-            <option value="3" >3</option>
-            <option value="4" >4</option>
-            <option value="5" >5</option>
-            <option value="6" >6</option>
-            <option value="7" >7</option>
-            <option value="8" >8</option>
-            <option value="9" >9</option>
         </select>
 
     </div>
 
 </div>
 
-        
 
 
 
